tests/data/access-control/ingress/mergeable/annotations-ac-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.org/mergeable-ingress-type: "master"
    nginx.org/policies: "deny-policy"
  name: annotations-ac-ingress-master
spec:
  ingressClassName: nginx
  rules:
  - host: ingress-ac.example.com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: annotations-ac-ingress-minion
  annotations:
    nginx.org/mergeable-ingress-type: "minion"
spec:
  ingressClassName: nginx
  rules:
  - host: ingress-ac.example.com
    http:
      paths:
      - path: /backend1
        pathType: Prefix
        backend:
          service:
            name: backend1-svc
            port:
              number: 80
